# ppf-contact-solver

./: .dockerignore  .gitignore  .travis.yml  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  build-all.sh  build.rs  docker-build.sh  install-blender-addon.ps1  install-blender-addon.sh  install-blender.sh  pyproject.toml  pyrightconfig.json  server.py  warmup.py
.cargo/: config.toml
articles/: bug.md  changes.md  cloud.md  develop.md  eigensys.md  hindsight.md  install.md  llm_transparency.md  performance.md  refactor_202510.md
blender_addon/: LLM.md  README.md  __init__.py  blender_manifest.toml  capture.sh  launch.sh
build-win-native/: README.md  TESTING.md  build-cargo-emul.bat  build-emul.bat  build.bat  bundle.bat  clean-build.bat  clean-env.bat  clear-all.bat  clear-cache.bat  enable_long_path.bat  fast-check-all.bat  git-pull.bat  inject_fast_check.py  make-slim-ffmpeg.bat  make-slim-ffmpeg.sh  simbackend_cuda.vcxproj  warmup.bat
calibration/: README.md  report.html  report.md  report.py  viz.py
crates/ppf-cts-core/: Cargo.toml  build.rs
crates/ppf-cts-core/benches/: rasterizer.rs
crates/ppf-cts-core/cpp/: intersect_ffi.cpp
crates/ppf-cts-core/src/: cancel.rs  effects.rs  events.rs  extra.rs  lib.rs  parsers.rs  state.rs  utils.rs
crates/ppf-cts-core/src/datamodel/: animation.rs  app.rs  asset.rs  collider.rs  easing.rs  elastic_model.rs  interp_consts.rs  mesh.rs  mod.rs  object.rs  param_manager.rs  params.rs  pin.rs  pin_apply.rs  quat.rs  scene.rs  validators.rs
crates/ppf-cts-core/src/datamodel/decoder/: mod.rs  validate.rs
crates/ppf-cts-core/src/datamodel/session/: format.rs  frames.rs  log.rs  mod.rs  paths.rs  scripts.rs  tests.rs  types.rs
crates/ppf-cts-core/src/kernels/: bvh.rs  constants.rs  decoder.rs  fixed_scene_assemble.rs  geom_util.rs  intersection.rs  invisible_collider.rs  mod.rs  proximity.rs  rasterizer.rs  scene_loops.rs  sdf.rs
crates/ppf-cts-core/src/kernels/scene_build/: assembly.rs  bbox.rs  color_uv.rs  index_map.rs  mesh_metrics.rs  mod.rs  pin_kernel.rs  quaternion.rs  tests.rs  transform.rs
crates/ppf-cts-core/src/transitions/: mod.rs  tests.rs
crates/ppf-cts-formats/: Cargo.toml
crates/ppf-cts-formats/src/: envelope.rs  files.rs  lib.rs
crates/ppf-cts-formats/src/kinds/: mod.rs  param.rs  scene.rs
crates/ppf-cts-formats/src/status/: lock.rs  mod.rs
crates/ppf-cts-formats/tests/: cross_lang.rs
crates/ppf-cts-formats/tests/cbor_fixtures/: param.cbor  scene.cbor
crates/ppf-cts-formats/tests/scripts/: gen_fixtures.py
crates/ppf-cts-py/: Cargo.toml  build.rs  pyproject.toml
crates/ppf-cts-py/src/: app_py.rs  asset_py.rs  decoder_py.rs  errors.rs  extra_py.rs  kernels.rs  lib.rs  mesh_py.rs  param_py.rs  pin_py.rs  render_py.rs  session_py.rs  utils_py.rs
crates/ppf-cts-py/src/scene_py/: build.rs  easing_geom.rs  fixed_init.rs  helpers.rs  index_map.rs  loops.rs  mod.rs  pin_ops.rs  transform.rs  validators.rs
crates/ppf-cts-py/tests/: python_smoke.py
crates/ppf-cts-server/: Cargo.toml  build.rs
crates/ppf-cts-server/src/: config.rs  easy_parse.rs  engine.rs  error.rs  hardware.rs  lib.rs  main.rs  monitor.rs  protocol.rs  serve.rs  upload.rs
crates/ppf-cts-server/src/executor/: build.rs  mod.rs  session.rs  solver.rs
crates/ppf-cts-server/src/response/: mod.rs  scene_info.rs  shape.rs  summary.rs
crates/ppf-cts-server/src/wire/: data.rs  mod.rs  notebook.rs  upload.rs
crates/ppf-cts-server/tests/: binary_smoke.rs  monitor_integration.rs  wire_data_paths.rs  wire_integration.rs
crates/ppf-cts-server/tests/common/: mod.rs
crates/ppf-cts-solver/: Cargo.toml  build.rs
crates/ppf-cts-solver/src/: args.rs  backend.rs  builder.rs  cvec.rs  cvecvec.rs  data.rs  main.rs  mesh.rs  raw_vec.rs  scene.rs  status_writer.rs  triutils.rs
crates/ppf-cts-solver/src/cpp/: Makefile  data.hpp  stub.cpp
crates/ppf-cts-solver/src/cpp/barrier/: barrier.cu  logarithm.hpp
crates/ppf-cts-solver/src/cpp/buffer/: buffer.cu  buffer.hpp
crates/ppf-cts-solver/src/cpp/contact/: aabb.hpp  accd.hpp  contact.cu  contact.hpp  distance.hpp  intersect_core.hpp
crates/ppf-cts-solver/src/cpp/csrmat/: csrmat.cu  csrmat.hpp
crates/ppf-cts-solver/src/cpp/eigenanalysis/: eigenanalysis.cu  eigenanalysis.hpp
crates/ppf-cts-solver/src/cpp/energy/: energy.cu
crates/ppf-cts-solver/src/cpp/energy/model/: baraffwitkin.hpp  dihedral_angle.hpp  friction.hpp  inflate.hpp  pdrd_polar.hpp  pdrd_rigid.hpp  rigid_core.hpp  sand_rigid.hpp
crates/ppf-cts-solver/src/cpp/energy/model/tests/: .gitignore  Makefile  test_pdrd_polar.cpp
crates/ppf-cts-solver/src/cpp/kernels/: exclusive_scan.cu  exclusive_scan.hpp  radix_sort.cu  radix_sort.hpp  reduce.cu  reduce.hpp  vec_ops.cu  vec_ops.hpp
crates/ppf-cts-solver/src/cpp/lbvh/: lbvh.cu
crates/ppf-cts-solver/src/cpp/linalg/: eigsolve.hpp  smat.hpp
crates/ppf-cts-solver/src/cpp/main/: cuda_utils.hpp  main.cu  mem.hpp
crates/ppf-cts-solver/src/cpp/plasticity/: plasticity.hpp
crates/ppf-cts-solver/src/cpp/schwarz/: schwarz.cu  schwarz.hpp
crates/ppf-cts-solver/src/cpp/solver/: solver.cu  solver.hpp
crates/ppf-cts-solver/src/cpp/strainlimiting/: strainlimiting.cu
crates/ppf-cts-solver/src/cpp/utility/: dispatcher.cu  utility.cu  utility.hpp
crates/ppf-cts-solver/src/cpp/vec/: vec.hpp
crates/ppf-cts-solver/src/cpp_emul/: Makefile  main.cpp  mem.hpp  pd_arap.hpp  sand.hpp
docs/: .gitignore  build.sh  conf.py  generate_blender_api_reference.py  generate_frontend_params_reference.py  generate_mcp_reference.py  index.rst  requirements.txt
eigsys/: Makefile  svd_shifted.cpp
examples/: belt.ipynb  blender.ipynb  cards.ipynb  codim.ipynb  curtain.ipynb  domino.ipynb  drape.ipynb  fishingknot.ipynb  fitting.ipynb  five-twist.ipynb  friction.ipynb  hang.ipynb  headless.py  large-five-twist.ipynb  large-twist.ipynb  large-woven.ipynb  needle.ipynb  noodle.ipynb  plastic.ipynb  ribbon.ipynb  roller.ipynb  stack.ipynb  surface_mapping.ipynb  trampoline.ipynb  trapped.ipynb  twist.ipynb  walkthrough.ipynb  woven.ipynb  yarn.ipynb
(+640 files in other folders)
