# File: crates/ppf-cts-formats/Cargo.toml
# Code: Claude Code
# Review: Ryoichi Ando (ryoichi.ando@zozo.com)
# License: Apache v2.0
#
# Wire + persistence formats shared between the Blender addon (CBOR
# producer), the Rust server (CBOR consumer + persistence), and
# the PyO3 frontend bindings. All cross-language payloads carry an
# `Envelope<T>` so we can refuse mismatched schema versions explicitly.

[package]
name = "ppf-cts-formats"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
ciborium.workspace = true
thiserror.workspace = true

# The status-record liveness lock (status::lock) needs a kernel advisory
# lock the OS releases on ANY process death, plus a PID-scoped liveness
# probe. Both are raw syscalls, so they are the crate's only
# platform-conditional dependencies.
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Threading",
] }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
