# File: crates/ppf-cts-py/Cargo.toml
# Code: Claude Code
# Review: Ryoichi Ando (ryoichi.ando@zozo.com)
# License: Apache v2.0
#
# PyO3 bindings. Compiled as a cdylib by plain `cargo build` (this crate
# is a workspace default-member) into the Python extension `_ppf_cts_py`.
# `frontend/__init__.py` loads the resulting `target/<profile>/` cdylib
# directly via importlib, so JupyterLab notebooks see the same names they
# always did. There is no maturin wheel step (see build.rs for the macOS
# link flag).
#
# abi3-py38: one cdylib works for any CPython >= 3.8.

[package]
name = "ppf-cts-py"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "_ppf_cts_py"
crate-type = ["cdylib", "rlib"]
# The `extension-module` feature tells pyo3 not to link libpython, so a
# Rust test/doctest harness for this crate fails to link (`undefined
# reference to PyXXX`). The Python-level smoke tests in tests/ cover this
# crate instead, so disable the cargo test harness. Without this, now that
# ppf-cts-py is a default-member, a bare `cargo test` would break.
test = false
doctest = false

[dependencies]
ppf-cts-core = { path = "../ppf-cts-core" }
ppf-cts-formats = { path = "../ppf-cts-formats" }
pyo3 = { version = "0.24.1", features = ["abi3-py38", "extension-module"] }
numpy = "0.24"
# Same major as the `numpy` crate's internal ndarray version; needed
# to construct (n, 3) arrays for return-by-reshape.
ndarray.workspace = true

[lints]
workspace = true
