# File: crates/ppf-cts-py/pyproject.toml
# Code: Claude Code
# Review: Ryoichi Ando (ryoichi.ando@zozo.com)
# License: Apache v2.0
#
# Build the PyO3 extension `_ppf_cts_py` via maturin. The project venv
# at $HOME/.local/share/ppf-cts/venv consumes this with `maturin
# develop` during development; CI builds a wheel via `maturin build
# --release`.

[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "ppf-cts-py"
version = "0.1.0"
requires-python = ">=3.8"
description = "PyO3 bindings for the ppf-contact-solver core (Rust)."
license = { text = "Apache-2.0" }

[tool.maturin]
module-name = "_ppf_cts_py"
features = ["pyo3/extension-module"]
strip = true
